Initial commit, working on production

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
     "name": "node-file-server",
     "version": "1.0.0",
     "devDependencies": {
-        "http-server": "^0.9.0",
         "socket.io": "^1.7.2",
         "express":"^4.14.0",
-        "socket.io-client":"^1.7.2"
+        "socket.io-client":"^1.7.2",
+        "request":"^2.81.0"
     },
     "scripts": {
         "run": "npm src/fileServer.js"
